--- a/templates/article_edit.html
+++ b/templates/article_edit.html
@@ -1,10 +1,11 @@
-{% extends "base.html" %}
-{% load crispy_forms_tags %}
-
+<!-- templates/article_edit.html -->
+{% extends 'base.html' %}
 {% block content %}
+
+<body style="background-color:#C2C2C2;"></body>
 <h1>Edit</h1>
 <form action="" method="post">{% csrf_token %}
-  {{ form|crispy }}
-  <button class="btn btn-info ml-2" type="submit">Update</button>
+    {{ form.as_p }}
+    <button class="btn btn-info ml-2" type="submit">Update</button>
 </form>
 {% endblock content %}
