--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -1,26 +1,58 @@
-{% extends "base.html" %}
-
+{% extends 'base.html' %}
 {% block title %}Articles{% endblock title %}
-
 {% block content %}
-{% for article in article_list %}
-  <div class="card">
-    <div class="card-header">
-      <span class="font-weight-bold">{{ article.title }}</span> &middot;
-      <span class="text-muted">by {{ article.author }} |
-      {{ article.date }}</span>
+{% for article in object_list %}
+
+<body style="background-color:#C2C2C2;"></body>
+<div class="container mt-5 mb-3">
+    <div class="row">
+        <div class="col-md-4 bg-dark">
+            <div class="card p-3 mb-2 bg-info">
+
+                <div class="d-flex flex-row align-items-center">
+
+                    <div class="ms-2 c-details">
+                        <h2><span class="font-weight-bold">{{ article.author }} ()</span> &middot;</h2>
+                        <h3> <span class="text-muted"> {{ article.title }} </span></h3>
+                    </div>
+                </div>
+
+            </div>
+            <div class="mt-5">
+
+                <div class="card-body">
+                    <!-- Changes start here! -->
+                    <p></p>
+                    <a href="{% url 'article_edit' article.pk %}">Edit</a> |
+                    <a href="{% url 'article_delete' article.pk %}">Delete</a> |
+                    <a href="#">Reviews</a>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                    <a href="#"> Add Review</a>
+
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="card-body">
-      {{ article.body }}
-    </div>
-    <div class="card-footer text-center text-muted">
-      <a href="{% url 'article_edit' article.pk %}">Edit</a> |
-      <a href="{% url 'article_delete' article.pk %}">Delete</a>
-    </div>
-  </div>
-  <br />
+
+    <!--<div class="card">
+            <div class="card-header">
+                <span class="font-weight-bold">{{ article.title }}</span> &middot;
+                <span class="text-muted">by {{ article.author }}
+                    | {{ article.date }}</span>
+            </div>
+            >
+            <div class="card-footer">
+                {% for comment in article.comments.all %}
+                <p>
+                    <span class="font-weight-bold">
+                        {{ comment.author }} &middot;
+                    </span>
+                    {{ comment }}
+                </p>
+                {% endfor %}
+            </div>
+             -->
+</div>
+
+<br />
 {% endfor %}
 {% endblock content %}
-
-
-
