--- a/templates/article_new.html
+++ b/templates/article_new.html
@@ -1,10 +1,10 @@
-{% extends "base.html" %}
-{% load crispy_forms_tags %}
-
+{% extends 'base.html' %}
 {% block content %}
-<h1>New article</h1>
+
+<body style="background-color:#C2C2C2;"></body>
+<h1>New Profile Review</h1>
 <form action="" method="post">{% csrf_token %}
-  {{ form|crispy }}
-  <button class="btn btn-success ml-2" type="submit">Save</button>
+    {{ form.as_p }}
+    <button class="btn btn-success ml-2" type="submit">Save</button>
 </form>
 {% endblock content %}
