--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,10 +1,7 @@
-{% extends "base.html" %}
-
+<!-- templates/registration/password_change_done.html -->
+{% extends 'base.html' %}
 {% block title %}Password Change Successful{% endblock title %}
-
 {% block content %}
-  <h1>Password change successful</h1>
-  <p>Your password was changed.</p>
+<h1>Password change successful</h1>
+<p>Your password was changed.</p>
 {% endblock content %}
-
-
