--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,10 +1,8 @@
-{% extends "base.html" %}
-
+<!-- templates/registration/password_reset_done.html -->
+{% extends 'base.html' %}
 {% block title %}Email Sent{% endblock title %}
-
 {% block content %}
 <h1>Check your inbox.</h1>
 <p>We've emailed you instructions for setting your password.
-You should receive the email shortly!</p>
+    You should receive the email shortly!</p>
 {% endblock content %}
-
