--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,16 +1,13 @@
-{% extends "base.html" %}
-{% load crispy_forms_tags %}
-
+<!-- templates/registration/password_reset_form.html -->
+{% extends 'base.html' %}
 {% block title %}Forgot Your Password?{% endblock title %}
-
 {% block content %}
 <h1>Forgot your password?</h1>
 <p>Enter your email address below, and we'll email instructions
-for setting a new one.</p>
-
-<form method="POST">{% csrf_token %}
-  {{ form|crispy }}
-  <input class="btn btn-success" type="submit"
-    value="Send me instructions!">
+    for setting a new one.</p>
+<form method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input class="btn btn-success" type="submit" value="Send me instructions!">
 </form>
 {% endblock content %}
