--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,10 +1,15 @@
-{% extends "base.html" %}
+<!-- templates/signup.html -->
+{% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block title %}Sign Up{% endblock title%}
-
 {% block content %}
+
+<body style="background-color:#C2C2C2;"></body>
 <h2>Sign Up</h2>
-<form method="post">{% csrf_token %}
+<form method="post">
+    {% csrf_token %}
     {{ form|crispy }}
     <button class="btn btn-success" type="submit">Sign Up</button>
+    <a href="{% url 'signup' %}" class="btn btn-primary">Sign Up</a>
+</form>
 {% endblock content %}
