--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -3,37 +3,122 @@
 {% block content %}
 {% for article in object_list %}
 
-<body style="background-color:#C2C2C2;"></body>
-<div class="container mt-5 mb-3">
-    <div class="row">
-        <div class="col-md-4 bg-dark">
-            <div class="card p-3 mb-2 bg-info">
+<html lang="en">
 
-                <div class="d-flex flex-row align-items-center">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta charset="UTF-8">
+    <title>Rating</title>
+</head>
 
-                    <div class="ms-2 c-details">
-                        <h2><span class="font-weight-bold">{{ article.author }} ()</span> &middot;</h2>
-                        <h3> <span class="text-muted"> {{ article.title }} </span></h3>
+<body style="background-image: linear-gradient(to bottom right, rgb(98, 96, 113), rgb(89, 144, 164));">
+    <style>
+        .rating-list li {
+            float: right;
+            color: #ddd;
+            padding: 10px 5px;
+        }
+
+        .rating-list li:hover,
+        .rating-list li:hover~li {
+            color: orange;
+        }
+
+        .rating-list {
+            display: inline-block;
+            list-style: none;
+        }
+
+        .checked {
+            color: orange;
+        }
+    </style>
+
+    <div class="container mt-5 mb-3">
+        <div class="row">
+            <div class="col-md-4 bg-dark">
+                <div class="card p-3 mb-2 bg-info">
+
+                    <div class="d-flex flex-row align-items-center">
+
+                        <div class="ms-2 c-details">
+                            <h2><span class="font-weight-bold">{{ article.author }} ()</span> &middot;</h2>
+                            <h3> <span class="text-muted"> {{ article.title }} </span></h3>
+                            <h5 class="card-title">Avg rating:
+                                <span class="fa fa-star {% if article.average_rating > 0 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if article.average_rating > 1 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if article.average_rating > 2 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if article.average_rating > 3 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if article.average_rating > 4 %} checked {% endif %}"></span>
+                            </h5>
+                            <ul class="btn btn-light list-inline rating-list">
+                                <li onclick="rate(5)">
+                                    <i class="fa fa-star {% if article.user_rating > 4 %} checked {% endif %}"
+                                        title="Rate 5"></i>
+                                </li>
+                                <li onclick="rate(4)">
+                                    <i class="fa fa-star {% if article.user_rating > 3 %} checked {% endif %}"
+                                        title="Rate 4"></i>
+                                </li>
+                                <li onclick="rate(3)">
+                                    <i class="fa fa-star {% if article.user_rating > 2 %} checked {% endif %}"
+                                        title="Rate 3"></i>
+                                </li>
+                                <li onclick="rate(2)">
+                                    <i class="fa fa-star {% if article.user_rating > 1 %} checked {% endif %}"
+                                        title="Rate 2"></i>
+                                </li>
+                                <li onclick="rate(1)">
+                                    <i class="fa fa-star {% if article.user_rating > 0 %} checked {% endif %}"
+                                        title="Rate 1"></i>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <script>
+                    const rate = (rating, post_id) => {
+                        fetch(`/rate/${post_id}/${rating}/`, {
+                            method: 'GET',
+                            headers: {
+                                'Content-Type': 'application/json'
+                            }
+                        }).then(rest => {
+                            window.location.reload();
+                            // you may want to update the rating here
+                            // to simplify stuff, I just reload the page
+                        })
+                    }
+                </script>
+
+
+                <div class="mt-5">
+
+
+                    <div class="card-body">
+                        <!-- Changes start here! -->
+                        <p></p>
+                        <a href="{% url 'article_edit' article.pk %}">Edit</a> |
+                        <a href="{% url 'article_delete' article.pk %}">Delete</a> |
+                        <a href="{% url 'article_new' %}">Add
+                            Review</a>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                        <a href="#"> Reviews</a>
+
                     </div>
                 </div>
-
             </div>
-            <div class="mt-5">
+            {% endfor %}
 
-                <div class="card-body">
-                    <!-- Changes start here! -->
-                    <p></p>
-                    <a href="{% url 'article_edit' article.pk %}">Edit</a> |
-                    <a href="{% url 'article_delete' article.pk %}">Delete</a> |
-                    <a href="#">Reviews</a>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-                    <a href="#"> Add Review</a>
 
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <!--<div class="card">
+            <!--<div class="card">
             <div class="card-header">
                 <span class="font-weight-bold">{{ article.title }}</span> &middot;
                 <span class="text-muted">by {{ article.author }}
@@ -51,8 +136,11 @@
                 {% endfor %}
             </div>
              -->
-</div>
+        </div>
+    </div>
+</body>
 
+</html>
 <br />
-{% endfor %}
+
 {% endblock content %}
