--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}Newspaper App{% endblock title %}</title>
+    <title>{% block title %}Star U App{% endblock title %}</title>
     <meta name="viewport" content="width=device-width,
   initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -18,12 +19,16 @@
             <div class="container bg-dark">
                 <div class="d-flex flex-wrap align-items-center justify-content-center
           justify-content-lg-start">
-                    <!--<nav class="navbar navbar-dark bg-dark"></nav>-->
-                    <a class="navbar-brand" href="{% url 'home' %}">Star U</a>
+                    <!--<nav class="navbar navbar-dark bg-dark"></nav>
+                    <a class="navbar-brand" href="{% url 'home' %}">Star U</a>-->
+                    <a href="{% url 'home' %}">
+                        <img src="https://github.com/jdbennett1/starU-app/blob/main/starU.png?raw=true"
+                            alt="staru logo"></a>
+
                     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center
             mb-md-0">
                         {% if user.is_authenticated %}
-                        <li><a href="#" class="nav-link px-2 link-light">Search Bar Spot</a></li>
+                        <li><a href="{% url 'article_new' %}" class="nav-link px-2 link-light">spot</a></li>
                         <!--{% url 'article_new' %}-->
                     </ul>
                     <div class="dropdown text-end">
@@ -60,8 +65,5 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
-
-</html>
-
 
 </html>
