--- a/templates/home.html
+++ b/templates/home.html
@@ -2,14 +2,23 @@
 {% block title %}Home{% endblock title %}
 {% block content %}
 <br />
+<style>
+    h1 {
+        text-shadow: 2px 2px 5px red;
+    }
+</style>
 
-<body style="background-color:#C2C2C2;"></body>
-<div class="jumbotron">
+<body style="background-image: linear-gradient(to bottom right, rgb(98, 96, 113), rgb(89, 144, 164));">
+    <!--<div class="jumbotron">-->
     <h1 class="display-4">Star U</h1>
     <p class="lead">A Reviewing website to know where you stand among the rest.</p>
-    <p class="lead"> Start by clicking on "View All Profiles" or using the Search Bar above to find someone Specific</p>
+    <p class="lead"> Start by clicking on "View All Profiles" or using the Search Bar above to find someone Specific
+    </p>
     <p class="lead">
         <a class="btn btn-primary btn-lg" href="{% url 'article_list' %}" role="button">View All Profiles</a>
     </p>
-</div>
-{% endblock content %}
+    <!--</div>-->
+
+    {% endblock content %}
+</body>
+<!--"background-color:#C2C2C2;"-->
