--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+
 {% block title %}Articles{% endblock title %}
 {% block content %}
 {% for article in object_list %}
@@ -56,7 +57,7 @@
                                 <span class="fa fa-star {% if article.average_rating > 4 %} checked {% endif %}"></span>
                             </h5>
                             <ul class="btn btn-light list-inline rating-list">
-                                <li onclick="rate(5)">
+                                <li onclick="rate(5, article.id )">
                                     <i class="fa fa-star {% if article.user_rating > 4 %} checked {% endif %}"
                                         title="Rate 5"></i>
                                 </li>
@@ -81,27 +82,7 @@
                     </div>
 
                 </div>
-
-
-                <script>
-                    const rate = (rating, post_id) => {
-                        fetch(`/rate/${post_id}/${rating}/`, {
-                            method: 'GET',
-                            headers: {
-                                'Content-Type': 'application/json'
-                            }
-                        }).then(rest => {
-                            window.location.reload();
-                            // you may want to update the rating here
-                            // to simplify stuff, I just reload the page
-                        })
-                    }
-                </script>
-
-
                 <div class="mt-5">
-
-
                     <div class="card-body">
                         <!-- Changes start here! -->
                         <p></p>
@@ -110,12 +91,26 @@
                         <a href="{% url 'article_new' %}">Add
                             Review</a>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
                         <a href="#"> Reviews</a>
-
                     </div>
                 </div>
             </div>
             {% endfor %}
+            {% endblock content %}
 
+            <script>
+                const rate = (rating, article_id) => {
+                    fetch(`https://github.com/jdbennett1/starU-app/blob/main/articles/views.py/rate/${article_id}/${rating}/`, {
+                        method: 'GET',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        }
+                    }).then(rest => {
+                        window.location.reload();
+                        // you may want to update the rating here
+                        // to simplify stuff, I just reload the page
+                    })
+                }
+            </script>
 
 
             <!--<div class="card">
@@ -142,5 +137,3 @@
 
 </html>
 <br />
-
-{% endblock content %}
